--- a/style.css
+++ b/style.css
@@ -20,6 +20,12 @@ header {
     background-position: 80%;
     z-index: 9999;
 }
+.image-class {
+margin: 10px;
+align-items: center;
+width: 300px;
+height: 300px;
+}
 
 .full-menu {
     margin-left: 10px;
@@ -33,8 +39,9 @@ header {
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     max-width: 300px;
     color: aliceblue;
-    background-color: rgb(150, 150, 222);
+    background-color: rgb(100, 100, 103);
     margin: 10px;
+    
 }
 
 .box{
@@ -42,5 +49,14 @@ header {
 }
 
 .everything{ 
+    display: flex;
+    flex-wrap: wrap;
+    margin: 5px;
+    justify-content: center;
+}
+
+.price {
+    font-weight: 100;
+    text-align: center;
     
 }
