--- a/style.css
+++ b/style.css
@@ -20,6 +20,15 @@ header {
     background-position: 80%;
     z-index: 9999;
 }
+
+footer {
+    width: 100%;
+    display: flex;
+    background-color: #bfbfbf;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
 .image-class {
 margin: 10px;
 align-items: center;
@@ -58,5 +67,9 @@ height: 300px;
 .price {
     font-weight: 100;
     text-align: center;
+    
+}
+
+.reviews {
     
 }
